unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/Customer_Workforce_Quote_Item__c.object-meta.xml
<CustomObject>
    <label>Customer Workforce Quote Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Workforce Quote Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>