unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Air_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Air_Tickets__c</fullName>
    <label>Air Tickets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>