unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Annual_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Annual_Profit_Margin__c</fullName>
    <label>Annual Profit Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>