unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Clothes_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Clothes_Allowance__c</fullName>
    <label>Clothes Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>