unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Driver_Reserve_Rate__c.field-meta.xml
<CustomField>
    <fullName>Driver_Reserve_Rate__c</fullName>
    <label>Driver Reserve Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>