unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/End_of_Service__c.field-meta.xml
<CustomField>
    <fullName>End_of_Service__c</fullName>
    <label>End of Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>