unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/ET_Driver_Reserve__c.field-meta.xml
<CustomField>
    <fullName>ET_Driver_Reserve__c</fullName>
    <label>ET Driver Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>