unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Extra_Certification_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extra_Certification_Cost__c</fullName>
    <label>Extra Certification Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>