unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Health_Card__c.field-meta.xml
<CustomField>
    <fullName>Health_Card__c</fullName>
    <label>Health Card</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>