unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Housing_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Housing_Allowance__c</fullName>
    <label>Housing Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>