unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Is_Total_Rate_All_Units__c.field-meta.xml
<CustomField>
    <fullName>Is_Total_Rate_All_Units__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Rate All Units</label>
    <type>Checkbox</type>
</CustomField>