unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Is_Type__c.field-meta.xml
<CustomField>
    <fullName>Is_Type__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Proposal Type</label>
    <type>Checkbox</type>
</CustomField>