unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Is_Workforce_Monthly_Price__c.field-meta.xml
<CustomField>
    <fullName>Is_Workforce_Monthly_Price__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Workforce Monthly Price/ Per unit</label>
    <type>Checkbox</type>
</CustomField>