unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Label_Delivery_Days__c.field-meta.xml
<CustomField>
    <fullName>Label_Delivery_Days__c</fullName>
    <defaultValue>&quot;Delivery Days&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Days</label>
    <length>225</length>
    <type>Text</type>
</CustomField>