unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Label_No_of_Months__c.field-meta.xml
<CustomField>
    <fullName>Label_No_of_Months__c</fullName>
    <defaultValue>&quot;No of Months&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>No of Months</label>
    <length>225</length>
    <type>Text</type>
</CustomField>