unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Label_Number_of_Workforce__c.field-meta.xml
<CustomField>
    <fullName>Label_Number_of_Workforce__c</fullName>
    <defaultValue>&quot;No of Workforce&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>No of Workforce</label>
    <length>100</length>
    <type>Text</type>
</CustomField>