unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Label_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Label_Remarks__c</fullName>
    <defaultValue>&quot;Remarks&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <length>225</length>
    <type>Text</type>
</CustomField>