unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Label_Total_Rate_All_Units__c.field-meta.xml
<CustomField>
    <fullName>Label_Total_Rate_All_Units__c</fullName>
    <defaultValue>&quot;Annual Rate All Units&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Annual Rate All Units</label>
    <length>225</length>
    <type>Text</type>
</CustomField>