unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Label_Type__c.field-meta.xml
<CustomField>
    <fullName>Label_Type__c</fullName>
    <defaultValue>&quot;Proposal Type&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposal Type</label>
    <length>225</length>
    <type>Text</type>
</CustomField>