unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Label_Workforce_Monthly_Price__c.field-meta.xml
<CustomField>
    <fullName>Label_Workforce_Monthly_Price__c</fullName>
    <defaultValue>&quot;Workforce Monthly Cost/ Per Unit&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Workforce Monthly Price/ Per unit</label>
    <length>225</length>
    <type>Text</type>
</CustomField>