unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Language_and_Psychometric_Test__c.field-meta.xml
<CustomField>
    <fullName>Language_and_Psychometric_Test__c</fullName>
    <label>Language and Psychometric Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>