unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Licensing_Fees__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Fees__c</fullName>
    <label>Licensing Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>