unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Manpower_Profit_Margin_Target_Prices__c.field-meta.xml
<CustomField>
    <fullName>Manpower_Profit_Margin_Target_Prices__c</fullName>
    <label>Manpower Profit Margin Target Prices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>