unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Monthly_Rate_with_VAT__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rate_with_VAT__c</fullName>
    <label>Monthly Rate(with VAT)/ Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>