unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/No_of_Years__c.field-meta.xml
<CustomField>
    <fullName>No_of_Years__c</fullName>
    <label>Years</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>