unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Number_of_coverage_years_for_visa__c.field-meta.xml
<CustomField>
    <fullName>Number_of_coverage_years_for_visa__c</fullName>
    <label>Number of coverage years for visa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>