unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Number_of_Workforce__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Workforce__c</fullName>
    <label>Qty</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>