unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Nunmber_of_Children__c.field-meta.xml
<CustomField>
    <fullName>Nunmber_of_Children__c</fullName>
    <label>Nunmber of Children</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>