unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pricing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>