unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Profit_Number_of_Months__c.field-meta.xml
<CustomField>
    <fullName>Profit_Number_of_Months__c</fullName>
    <label>Profit Number of Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>