unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Profit_Salary_Type__c.field-meta.xml
<CustomField>
    <fullName>Profit_Salary_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profit Salary Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>