unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Customer_Quote__c</referenceTo>
    <relationshipLabel>Customer Workforce Quote Items</relationshipLabel>
    <relationshipName>Customer_Workforce_Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>