unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>