unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Reserve_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Amount__c</fullName>
    <label>Reserve Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>