unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Salary_No_of_months_for_Driver_for_SLine__c.field-meta.xml
<CustomField>
    <fullName>Salary_No_of_months_for_Driver_for_SLine__c</fullName>
    <label>Salary No of months for Driver for SLine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>