unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Salary_No_of_Months_for_other_Manpower__c.field-meta.xml
<CustomField>
    <fullName>Salary_No_of_Months_for_other_Manpower__c</fullName>
    <label>Salary No of Months for other Manpower</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>