unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>