unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Smart_Phone_Cost__c.field-meta.xml
<CustomField>
    <fullName>Smart_Phone_Cost__c</fullName>
    <label>Smart Phone Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>