unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Total_Annual_Net_Profit_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Net_Profit_Value__c</fullName>
    <label>Total Annual Net Profit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>