unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Total_Annual_Price_excluding_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Price_excluding_VAT__c</fullName>
    <label>Total Annual Price excluding VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>