unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Total_Cost_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Discounted__c</fullName>
    <label>Total Cost(Discounted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>