unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Total_Indirect_Operational_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Indirect_Operational_Costs__c</fullName>
    <label>Total Indirect Operational Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>