unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Total_Main_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Total_Main_Vehicle__c</fullName>
    <label>Total Main Vehicle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>