unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Total_Manpower_Profits__c.field-meta.xml
<CustomField>
    <fullName>Total_Manpower_Profits__c</fullName>
    <label>Total Manpower Profits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>