unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Reliever</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>