unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/VAT_Cost__c.field-meta.xml
<CustomField>
    <fullName>VAT_Cost__c</fullName>
    <label>VAT Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>