unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Vat_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Vat_Per_Unit__c</fullName>
    <label>Vat /Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>