unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Vat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Vat_Rate__c</fullName>
    <label>Vat Rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0.05</fullName>
                <default>true</default>
                <label>5</label>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>