unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Visa_amount__c.field-meta.xml
<CustomField>
    <fullName>Visa_amount__c</fullName>
    <label>Visa amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>