unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Workforce_basic_salary__c.field-meta.xml
<CustomField>
    <fullName>Workforce_basic_salary__c</fullName>
    <label>Workforce basic salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>