unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Workforce_Gross_Salary__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Gross_Salary__c</fullName>
    <label>Workforce Gross Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>