unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Workforce_Monthly_Price__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Monthly_Price__c</fullName>
    <label>Monthly/Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>