unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Workforce_Quote_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Quote_Item_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workforce Quote Item Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>