unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Workforce_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Record_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workforce Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>