unpackaged/main/default/objects/Customer_Workforce_Quote_Item__c/fields/Working_Months_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Working_Months_Per_Year__c</fullName>
    <label>Working Months Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>